Rework README
Describe the fork as the maintained continuation of lz4/lz4-java, add
Gradle coordinates and supported native platforms, recommend the safe
decompressor and frame streams, modernize the examples, and add security,
build and license sections. The version is omitted in favor of a Maven
Central badge so it doesn't go stale.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>